Fix font color for readability

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -19,7 +19,7 @@
 
     &,
     &:visited {
-        color: #aaa;
+        color: #fff;
     }
 
     &:hover {
@@ -37,7 +37,7 @@
 
     .page-link {
         font-size: 14px;
-        color: $text-color;
+        color: #777;
         line-height: $base-line-height;
         text-decoration: none;
 
